--- a/portfolio/angular.json
+++ b/portfolio/angular.json
@@ -30,7 +30,6 @@
             ],
 
             "scripts": [
-              "./node_modules/chart.js/dist/Chart.js"
             ]
 
        
@@ -100,9 +99,15 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
+
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/chart.js/dist/Chart.js"
+            ]
           }
         }
       }
